NXP-33053: Format + fix some SonarQube issues